src/App.css
.App {
  background: rgb(253, 58, 115);
  position: fixed;
  overflow: hidden;
  width: 100%;
  height: 100%;
  cursor: url("https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png")
      39 39,
    auto;
}

.menu-button-container {
  position: relative; /* Position the button in the top-left */
  top: 20px;
  left: 20px;
}

.menu-icon {
  display: flex;
  /* padding: 30px; */
  flex-direction: column; /* Align lines vertically */
  justify-content: space-between; /* Evenly space lines */
  width: 30px; /* Set the width of the button */
  height: 20px; /* Set the height of the button */
  cursor: pointer; /* Pointer cursor on hover */
  text-decoration: none; /* Remove underline for Link */
}

.line {
  width: 100%; /* Full width of the icon container */
  height: 4px; /* Thickness of the line */
  background-color: #ffffffca; /* Line color */
  border-radius: 2px; /* Slight rounding for smoother appearance */
  transition: background-color 0.3s ease; /* Hover effect */
}

.poppins-bold {
  font-family: "Poppins", serif;
  font-weight: 700;
  font-style: normal;
}

.menu-icon:hover .line {
  background-color: #1a060d; /* Darker shade on hover */
}

.App > div > div {
  position: absolute;
  width: 100vw;
  height: 100vh;
  will-change: transform;
  display: flex;
  align-items: center;
  justify-content: center;
}
/* child of child of App div */
.App > div > div > div {
  background-color: white;
  background-size: auto 85%;
  background-repeat: no-repeat;
  background-position: center center;
  width: 45vh;
  max-width: 271px;
  height: 85vh;
  max-height: 473px;
  will-change: transform;
  border-radius: 10px;
}

.card-back {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 1rem;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;

  padding: 20px;
  background-color: #fff;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2);
  /* font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: normal; */
  font-family: "Poppins", serif;
  font-weight: 500;
  font-style: normal;
}

